crates/library/src/snapshots/library__execute__tests__a_cached_scan_after_a_fresh_scan_answers_from_the_cache.snap
---
source: crates/library/tests/unit/execute.rs
expression: reply
---
Some(
    Loaded {
        tracks: [
            Track {
                source: Local(
                    "[tmp]/music/a.wav",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: Some(
                        "Wav",
                    ),
                    bitrate: Some(
                        Kbps(
                            64,
                        ),
                    ),
                    sample_rate: Some(
                        Hertz(
                            8000,
                        ),
                    ),
                    bits_per_sample: Some(
                        8,
                    ),
                    channels: Some(
                        1,
                    ),
                    decibels: None,
                },
                display: "a.wav",
                tagging: Tagged(
                    100ms,
                ),
            },
        ],
        revision: Revision(
            2,
        ),
    },
)
