crates/library/src/snapshots/library__execute__tests__a_cached_scan_without_a_cache_lists_untagged_tracks_under_the_revision_it_was_given.snap
---
source: crates/library/tests/unit/execute.rs
expression: reply
---
Some(
    Listed {
        tracks: [
            Track {
                source: Local(
                    "[tmp]/music/a.wav",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "a",
                tagging: Listed(
                    None,
                ),
            },
        ],
        revision: Revision(
            2,
        ),
    },
)
