crates/library/src/snapshots/library__execute__tests__load_favorites_replies_with_the_saved_set.snap
---
source: crates/library/src/execute.rs
expression: executed
---
Some(
    FavoritesLoaded(
        Favorites(
            {
                "/music/a.flac",
            },
        ),
    ),
)
