crates/library/src/snapshots/library__execute__tests__tag_tracks_answers_every_listed_path_under_the_revision_it_was_given.snap
---
source: crates/library/tests/unit/execute.rs
expression: reply
---
Some(
    Tagged {
        tracks: [
            Track {
                source: Local(
                    "[tmp]/music/a.wav",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: Some(
                        "Wav",
                    ),
                    bitrate: Some(
                        Kbps(
                            64,
                        ),
                    ),
                    sample_rate: Some(
                        Hertz(
                            8000,
                        ),
                    ),
                    bits_per_sample: Some(
                        8,
                    ),
                    channels: Some(
                        1,
                    ),
                    decibels: None,
                },
                display: "a.wav",
                tagging: Tagged(
                    100ms,
                ),
            },
            Track {
                source: Local(
                    "[tmp]/music/never-existed.flac",
                ),
                tags: Tags {
                    title: None,
                    artist: None,
                    album: None,
                    album_artist: None,
                    date: None,
                    genre: None,
                    track_number: None,
                    track_total: None,
                    disc: None,
                    composer: None,
                    comment: None,
                    lyrics: None,
                },
                audio_format: AudioFormat {
                    format: None,
                    bitrate: None,
                    sample_rate: None,
                    bits_per_sample: None,
                    channels: None,
                    decibels: None,
                },
                display: "never-existed",
                tagging: Listed(
                    None,
                ),
            },
        ],
        revision: Revision(
            1,
        ),
    },
)
